--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
-	<id>com.nmatveev.idea-plugin-protobuf</id>
+    <id>org.consulo.google.protobuf</id>
 	<vendor>Strintec</vendor>
-	<name>Google Protocol Buffers support</name>
+	<name>Google Protobuf</name>
 	<version>0.5.4</version>
 	<category>Custom Languages</category>
 	<depends>org.consulo.java</depends>
