--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -11,9 +11,6 @@
 		<fileTypeFactory implementation="protobuf.file.PbFileTypeFactory"/>
 		<syntaxHighlighter key="Protobuf" implementationClass="protobuf.highlighter.PbSyntaxHighlighter"/>
 		<annotator language="Protobuf" implementationClass="protobuf.annotator.PbAnnotator"/>
-		<projectConfigurable instance="protobuf.compiler.PbCompilerConfigurable" id="Protobuf" displayName="Protobuf" parentId="project.propCompiler"/>
-		<projectService serviceImplementation="protobuf.compiler.PbCompilerConfiguration" serviceInterface="protobuf.compiler.PbCompilerConfiguration"/>
-		<compiler implementation="protobuf.compiler.PbCompiler"/>
 		<lang.braceMatcher language="Protobuf" implementationClass="protobuf.highlighter.PbBraceMatcher"/>
 		<lang.parserDefinition language="Protobuf" implementationClass="protobuf.lang.parser.PbParserDefinition"/>
 		<lang.formatter language="Protobuf" implementationClass="protobuf.formatter.PbFormattingModelBuilder"/>
@@ -21,5 +18,6 @@
 		<lang.foldingBuilder language="Protobuf" implementationClass="protobuf.folding.PbFoldingBuilder"/>
 		<lang.findUsagesProvider language="Protobuf" implementationClass="protobuf.findUsages.PbFindUsagesProvider"/>
 		<lang.psiStructureViewFactory language="Protobuf" implementationClass="protobuf.structureView.PbStructureViewBuilderProvider"/>
+		<taskByVfsChange filetype="Protobuf" implementationClass="org.consulo.google.protobuf.vfs.PbBackgroundTaskByVfsChangeProvider" />
 	</extensions>
 </idea-plugin>
