--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -23,6 +23,6 @@
 		<lang.foldingBuilder language="Protobuf" implementationClass="protobuf.folding.PbFoldingBuilder"/>
 		<lang.findUsagesProvider language="Protobuf" implementationClass="protobuf.findUsages.PbFindUsagesProvider"/>
 		<lang.psiStructureViewFactory language="Protobuf" implementationClass="protobuf.structureView.PbStructureViewBuilderProvider"/>
-		<taskByVfsChange filetype="Protobuf" implementationClass="org.consulo.google.protobuf.vfs.PbBackgroundTaskByVfsChangeProvider"/>
+		<taskByVfsChange implementation="org.consulo.google.protobuf.vfs.PbBackgroundTaskByVfsChangeProvider"/>
 	</extensions>
 </idea-plugin>
