fixed compilation under 2.0

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,17 +1,17 @@
 <idea-plugin version="2">
-	<id>org.consulo.google.protobuf</id>
-	<vendor>Strintec</vendor>
+	<id>consulo.google.protobuf</id>
 	<name>Google Protobuf</name>
 	<version>SNAPSHOT</version>
 	<category>Custom Languages</category>
-	<depends config-file="org.consulo.java.xml" optional="true">org.consulo.java</depends>
+	<vendor>Strintec</vendor>
+	<depends config-file="consulo.java.xml" optional="true">consulo.java</depends>
 
 	<extensionPoints>
-		<extensionPoint name="supportProvider" interface="org.consulo.google.protobuf.module.extension.GoogleProtobufSupportProvider"/>
+		<extensionPoint name="supportProvider" interface="consulo.google.protobuf.module.extension.GoogleProtobufSupportProvider"/>
 	</extensionPoints>
 
 	<extensions defaultExtensionNs="com.intellij">
-		<iconDescriptorUpdater implementation="org.consulo.google.protobuf.PbIconDescriptorUpdater"/>
+		<iconDescriptorUpdater implementation="consulo.google.protobuf.PbIconDescriptorUpdater"/>
 		<fileTemplateGroup implementation="protobuf.PbFileTemplateProvider"/>
 		<fileTypeFactory implementation="protobuf.file.PbFileTypeFactory"/>
 		<syntaxHighlighter key="Protobuf" implementationClass="protobuf.highlighter.PbSyntaxHighlighter"/>
@@ -23,6 +23,6 @@
 		<lang.foldingBuilder language="Protobuf" implementationClass="protobuf.folding.PbFoldingBuilder"/>
 		<lang.findUsagesProvider language="Protobuf" implementationClass="protobuf.findUsages.PbFindUsagesProvider"/>
 		<lang.psiStructureViewFactory language="Protobuf" implementationClass="protobuf.structureView.PbStructureViewBuilderProvider"/>
-		<taskByVfsChange implementation="org.consulo.google.protobuf.vfs.PbBackgroundTaskByVfsChangeProvider"/>
+		<taskByVfsChange implementation="consulo.google.protobuf.vfs.PbBackgroundTaskByVfsChangeProvider"/>
 	</extensions>
 </idea-plugin>
